<resources>

    <string name="app_name">UGao</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Design by ZIONS Team</string>
    <string name="inter_username">Enter UserName</string>
    <string name="inter_password">Enter PassWord</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="open" />
    <string name="close" />
    <string name="cua_hang_quan_9">Cua Hang Quan 9</string>
    <string name="dia_chi">Dia chi: 726 xa lo Ha Noi, KP.2, P. Hiep Phu, Q.9, TP. HCM</string>
</resources>
