<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_above="@id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logohez" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:paddingLeft="10dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:hint="@string/inter_username"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <EditText
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:hint="@string/inter_password"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="@string/log_in"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <TextView
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>